Fix horizontal scroll on about-us page

--- a/src/assets/css/layuots.scss
+++ b/src/assets/css/layuots.scss
@@ -350,6 +350,7 @@
   margin-bottom: 50px;
 }
 .about-content {
+  overflow: hidden;
   .editor-content {
     p {
       margin-bottom: 15px;
